--- a/index.html
+++ b/index.html
@@ -8,21 +8,30 @@
 <body>
 <h1> Role Playing Game! </h1>
 
+<section id="container">
+<section id="left"> 
+
 <p id="you-image"></p>
 <h2 id="you">  </h2>
 
 <p id="opponent-image"></p>
 <h2 id="opponent">  </h2>
+
 <p id="remainder-image"></p>
 <h2 id="remainder"> </h2>
 
-<section>
-<h2 id="end"> Results</h2>
+</section>
+
+<section id="right">
+
+<h2 id="results"> Results</h2>
 <button id="restart"> Restart </button>
 <button id="show"> Show Your Hand </button>
+
 </section>
-<p id="results"></p>
-<p id="restart"></p>
+
+
+</section>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 <script src="assets/javascript/game.js"></script>
 
